fix missing file, make debug/error readable

--- a/public/scss/error.scss
+++ b/public/scss/error.scss
@@ -6,10 +6,7 @@ body {
   pre {
     background: rgb(240, 240, 240);
     color: rgb(32, 32, 32);
-    white-space: normal;
-    code {
-      white-space: pre;
-    }
+    white-space: pre;
   }
 }
 
